--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,51 @@
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: #333;
+    --secondary-color: #444;
+    --overlay-color: rgba(0,0,0,0.7);
+}
+
+body {
+    font-family: 'Catamaran', sans-serif;
+    line-height: 1.6;
+    color: #333;
+    font-size: 1.1rem;
+
+}
+
+h1,h2,h3. h4 {
+    line-height: 1.3;
+}
+
+
+a {
+    color: var(--secondary-color);
+    text-decoration: none;
+}
+
+img {
+    width: 100%;
+}
+
+.cotainer {
+    max-width: 1100px;
+    margin: auto;
+    overflow: hidden;
+}
+
 /**** === SECTION STYLES ==== ***/
+
+/** NAV SECTION **/
+
 
 .flex_nav {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    margin-left: 3em;
+    margin-right: 3em;
 }
 
 .phono_nav_logo {
@@ -19,4 +58,27 @@
 .nav_menu li {
     list-style: none;
     display: inline-block;
+    font-size: 1.2em;
+    padding-top: .5em;
+    margin-left: 1em;
+
 }
+
+/** HEADER SECTION **/
+
+.white_headphone_section {
+    background-image: url(../../images/pexels-sound-on-3394650.jpg);
+    background-position: right;
+    background-repeat: no-repeat;
+    padding: 20em;
+}
+
+.white_headphone_text_section {
+    position: relative; 
+    right: 16.5em;
+    bottom: 10em;
+
+
+
+}
+
