Updated css file.

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,14 +79,33 @@ img {
     bottom: 10em;
 }
 
+.white_headphone_text_section h1 {
+    font-size: 3rem;
+}
+
+.white_headphone_text_section p {
+    font-size: 1.5rem;
+
+}
+
+.white_headphone_section_btn {
+    border-radius: 1rem;
+    padding: .7em;
+    width: 30%;
+    color: white;
+    font-size: 1.3em;
+    background-color: #333;
+
+}
+
 
 /** SECTION TWO **/
 
 .section_two {
     background-image: url(../../images/overlay_image.png);
-    padding: 20em;
-    padding-bottom: 0;
+    padding: 10em 20em 5em;
     background-repeat: no-repeat;
+    background-size: cover;
     
 }
 
@@ -103,6 +122,8 @@ img {
 }
 
 
+
+
 /** FOOTER **/
 
 .footer_section {
@@ -110,6 +131,7 @@ img {
     color: white;
     display: flex;
     flex-direction: row;
+    padding-bottom: 5em;
    
 }
 
@@ -142,3 +164,8 @@ img {
     padding: none;
 }
 
+.footer_btn {
+    padding: .8rem;
+    border-radius: .8em;
+    width: 80%;
+}
