--- a/css/styles.css
+++ b/css/styles.css
@@ -122,12 +122,57 @@ img {
 }
 
 
-/** COLLAGE SECTION **/
+/** GALLERY SECTION **/
 
-.collage_pic_section {
-    padding: auto;
+.section-three .gallery {
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+
 }
 
+
+.gallery *:first-child {
+    grid-column: 1/3;
+    grid-row: 1/3;
+}
+
+.gallery *:nth-child(2) {
+    grid-column: 3/5;
+
+}
+
+.gallery img {
+    width: 100%;
+    height: 100%;
+}
+
+
+/** LIGHTBOX **/
+
+#lightbox {
+    /*Using fixed so no matter where you're at 
+    on the page the image will always follow you
+    */
+    position: fixed;
+    /*
+    Z index so that it stacks on top of the page
+    */
+    z-index: 1000;
+    top: 0;
+    width: 50%;
+    height: 50%;
+    background-color: rgba(0,0,0,0.8);
+    display: none;
+}
+
+
+/*Want lightbox to show up when active
+*/
+#lightbox.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 /** FOOTER **/
@@ -151,6 +196,7 @@ img {
 
 .col_2, .col_3, .col_4 {
     margin-top: 1em;
+    overflow: auto;
 
 }
 
