--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
 
 }
 
-h1,h2,h3. h4 {
+h1,h2,h3, h4 {
     line-height: 1.3;
 }
 
@@ -32,10 +32,11 @@ img {
     width: 100%;
 }
 
-.cotainer {
+.container {
     max-width: 1100px;
     margin: auto;
     overflow: hidden;
+    padding: 0 2em;
 }
 
 /**** === SECTION STYLES ==== ***/
@@ -49,6 +50,8 @@ img {
     justify-content: flex-end;
     margin-left: 3em;
     margin-right: 3em;
+
+
 }
 
 .phono_nav_logo {
@@ -98,6 +101,19 @@ img {
 
 }
 
+
+.typing {
+    margin-left: 10px;
+    position: relative;
+}
+
+.typing::after{
+    content: '';
+    position: absolute;
+    height: 5%;
+    border: 2px solid white;
+
+}
 
 /** SECTION TWO **/
 
@@ -220,4 +236,16 @@ img {
     padding: .8rem;
     border-radius: .8em;
     width: 80%;
+}
+
+/*===== MEDIA QUERIES ======*/
+@media(max-width: 700px) {
+
+.white_headphone_text_section {
+    text-align: center;
+}
+
+
+
+
 }
